test/library/packages/Crypto/saru/utils/buffer3.good
buffer3.chpl:3: error: halt reached - Enter a string with length greater than 0 in order to create a buffer
