test/library/packages/Crypto/saru/utils/buffer3.chpl
proc main() {
  use Crypto;
  var a = new unmanaged CryptoBuffer(""); // doesn't do anything
  writeln(a.toHex());
  delete a;
}
